SONAR: Sonar code smells and formatting