@@ -5,7 +5,6 @@ import com.rviewer.skeletons.domain.model.Item;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class InputItemMapper {
@@ -17,11 +16,11 @@ public class InputItemMapper {
     }
 
     public List<Item> map(ItemListDto itemListDto) {
-        return itemListDto.getItems().stream().map(this::map).collect(Collectors.toList());
+        return itemListDto.getItems().stream().map(this::map).toList();
     }
 
     public ItemListDto map(List<Item> itemList) {
-        List<String> itemDetailList = itemList.stream().map(Item::getDetail).collect(Collectors.toList());
+        List<String> itemDetailList = itemList.stream().map(Item::getDetail).toList();
         return new ItemListDto().items(itemDetailList);
     }
 }
